--- a/app.json
+++ b/app.json
@@ -4,8 +4,9 @@
   "scheme": "fitgo",
   "version": "1.0.0",
   "orientation": "portrait",
+  "owner": "shefali_choudhary",
   "userInterfaceStyle": "automatic",
-  "icon": "./assets/images/app-icon-all.png",
+  "icon": "./assets/images/app-icon.png",
   "updates": {
     "fallbackToCacheTimeout": 0
   },
@@ -15,17 +16,17 @@
     "**/*"
   ],
   "android": {
-    "icon": "./assets/images/app-icon-android-legacy.png",
+    "icon": "./assets/images/app-icon.png",
     "package": "com.fitgo",
     "adaptiveIcon": {
-      "foregroundImage": "./assets/images/app-icon-android-adaptive-foreground.png",
-      "backgroundImage": "./assets/images/app-icon-android-adaptive-background.png"
+      "foregroundImage": "./assets/images/adaptive-icon.png",
+      "backgroundImage": "./assets/images/adaptive-icon.png"
     },
     "allowBackup": false,
     "edgeToEdgeEnabled": true
   },
   "ios": {
-    "icon": "./assets/images/app-icon-ios.png",
+    "icon": "./assets/images/app-icon.png",
     "supportsTablet": true,
     "bundleIdentifier": "com.fitgo"
   },
@@ -39,10 +40,10 @@
     [
       "expo-splash-screen",
       {
-        "image": "./assets/images/app-icon-android-adaptive-foreground.png",
+        "image": "./assets/images/adaptive-icon.png",
         "imageWidth": 300,
         "resizeMode": "contain",
-        "backgroundColor": "#191015"
+        "backgroundColor": "#ffffff"
       }
     ],
     [
@@ -62,6 +63,9 @@
   "extra": {
     "ignite": {
       "version": "11.3.2"
+    },
+    "eas": {
+      "projectId": "a6761733-916d-4e57-b119-dd30b2798d7e"
     }
   }
 }
