--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "build:ios:device": "eas build --profile development:device --platform ios --local",
     "build:ios:preview": "eas build --profile preview --platform ios --local",
     "build:ios:prod": "eas build --profile production --platform ios --local",
-    "build:android:sim": "eas build --profile development --platform android --local",
-    "build:android:device": "eas build --profile development:device --platform android --local",
-    "build:android:preview": "eas build --profile preview --platform android --local",
-    "build:android:prod": "eas build --profile production --platform android --local"
+    "build:android:sim": "eas build --profile development --platform android ",
+    "build:android:device": "eas build --profile development:device --platform android ",
+    "build:android:preview": "eas build --profile preview --platform android ",
+    "build:android:prod": "eas build --profile production --platform android "
   },
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.4.0",
