--- a/package.json
+++ b/package.json
@@ -37,15 +37,21 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "apisauce": "3.1.1",
+    "babel-plugin-inline-import": "^3.0.0",
+    "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
+    "drizzle-kit": "^0.31.5",
+    "drizzle-orm": "^0.44.7",
     "expo": "54.0.13",
     "expo-application": "~7.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-dev-client": "~6.0.12",
+    "expo-drizzle-studio-plugin": "^0.2.1",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.8",
     "expo-system-ui": "~6.0.7",
     "i18next": "^23.14.0",
     "intl-pluralrules": "^2.0.1",
