--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "date-fns": "^4.1.0",
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.7",
-    "expo": "54.0.13",
+    "expo": "^54.0.13",
     "expo-application": "~7.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-dev-client": "~6.0.12",
@@ -50,6 +50,7 @@
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
+    "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
     "expo-system-ui": "~6.0.7",
@@ -65,10 +66,11 @@
     "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv": "3.3.3",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "5.6.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.6.1",
+    "router": "^2.2.0",
     "setimmediate": "^1.0.5"
   },
   "devDependencies": {
