--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,7 @@
   "include": [
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/components/Routines/Exercise"  ],
   "exclude": [
     "node_modules",
     "test/**/*"
