fix(#2,#3,#4): resolve Expo SQLite integration and migration import issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,10 @@
   "include": [
     "**/*.ts",
     "**/*.tsx"
-, "app/components/Routines/Exercise"  ],
+, "app/components/Routines/Exercise",
+"drizzle",
+ "types/**/*"
+  ],
   "exclude": [
     "node_modules",
     "test/**/*"
