--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "babel-plugin-inline-import": "^3.0.0",
     "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
-    "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.7",
     "expo": "^54.0.13",
     "expo-application": "~7.0.7",
@@ -63,6 +62,7 @@
     "react-native-drawer-layout": "^4.0.1",
     "react-native-edge-to-edge": "~1.6.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv": "3.3.3",
     "react-native-reanimated": "~4.1.1",
@@ -71,7 +71,8 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.6.1",
     "router": "^2.2.0",
-    "setimmediate": "^1.0.5"
+    "setimmediate": "^1.0.5",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -82,6 +83,7 @@
     "@types/react": "~19.1.10",
     "babel-jest": "^29.2.1",
     "dependency-cruiser": "^17.0.2",
+    "drizzle-kit": "^0.31.6",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^9.1.0",
