--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "drizzle-orm": "^0.44.7",
     "expo": "^54.0.13",
     "expo-application": "~7.0.7",
+    "expo-av": "~16.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-dev-client": "~6.0.12",
     "expo-drizzle-studio-plugin": "^0.2.1",
@@ -50,6 +51,7 @@
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
     "expo-router": "~6.0.14",
+    "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
     "expo-system-ui": "~6.0.7",
@@ -59,6 +61,7 @@
     "react-dom": "19.1.0",
     "react-i18next": "^15.0.1",
     "react-native": "0.81.4",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-drawer-layout": "^4.0.1",
     "react-native-edge-to-edge": "~1.6.1",
     "react-native-gesture-handler": "~2.28.0",
@@ -68,6 +71,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-sound": "^0.13.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.6.1",
     "router": "^2.2.0",
