--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
-  "printWidth": 100,
-  "semi": false,
+  "semi": true,
   "singleQuote": false,
-  "trailingComma": "all",
-  "quoteProps": "consistent"
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
