--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "expo/tsconfig.json",
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "jsx": "react-native",
-    "customConditions": [
-      "react-native"
-    ],
+    "customConditions": ["react-native"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "strict": true,
@@ -16,25 +14,15 @@
     "noImplicitThis": true,
     "sourceMap": true,
     "target": "esnext",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./app/*"
-      ],
-      "@assets/*": [
-        "./assets/*"
-      ]
+      "@/*": ["./app/*"],
+      "@assets/*": ["./assets/*"]
     },
-    "typeRoots": [
-      "./node_modules/@types",
-      "./types"
-    ]
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "ts-node": {
     "compilerOptions": {
@@ -43,13 +31,10 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx"
-, "app/components/Routines/Exercise",
-"drizzle",
- "types/**/*"
+    "**/*.tsx",
+    "app/components/Routines/Exercise",
+    "drizzle",
+    "types/**/*"
   ],
-  "exclude": [
-    "node_modules",
-    "test/**/*"
-  ]
+  "exclude": ["node_modules", "test/**/*"]
 }
