--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
-    "expo": "^54.0.13",
+    "expo": "^54.0.27",
     "expo-application": "~7.0.7",
     "expo-av": "~16.0.7",
     "expo-build-properties": "~1.0.9",
@@ -56,7 +56,9 @@
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
     "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.14",
     "i18next": "^23.14.0",
+    "install": "^0.13.0",
     "intl-pluralrules": "^2.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
